# pentect

./: .gitattributes  .gitignore  .gitleaks.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  gitleaks.yml
archive/: ABOUT.md  LICENSE
archive/demo/juice/: README.md  answer_masked.md  answer_masked_opf_pf.md  answer_raw.md  capture.py  docker-compose.yml  identify_vulns.py  masked_summary_gemma.txt  prompt_masked_gemma.txt  raw_summary.txt
archive/demo/pentect_shop/: answer_masked_opf_pf.md  compare_opf_pf.md  identify_vulns.py  masked_summary_opf_pf.txt  (+2 more)
archive/engine/: cli.py  core.py  granularity.py  merger.py
archive/eval/: ft_compare.py  metrics.py
archive/scripts/: README_runpod.md  bench_scaling.py  dev.sh  measure_ner_contribution.py
archive/server/: main.py
archive/testcases/: schema.py
archive/tests/: test_crypto_address.py  test_encoding_peel.py  test_engine_core.py  test_engine_e2e.py  test_entropy_detector.py  test_merger.py  test_placeholder.py  test_regressions.py  test_rule_detector.py
archive/training/: convert_to_opf.py  generate_hard_val.py  prepare.py
archive/ui/: index.html  package.json
demo/juice/: answer_masked_gemma_fresh.md  captured.har  captured_masked_opf_pf.har  compare.md  compare_opf_pf.md  identify_vulns.py  masked_summary_opf_pf.txt  prompt_masked_opf_pf.txt  prompt_raw.txt
demo/pentect_shop/: README.md  answer_raw.md  app.py  capture.py  captured.har  prompt_raw.txt
demo/slides/: cat_mask.html  juice_masked_demo.html  recall_compare.html  recall_compare_opf.html
demo/webgoat/: captured.har  docker-compose.yml
engine/: __init__.py  categories.py  cli.py  core.py  granularity.py  merger.py  placeholder.py  verifier.py
engine/detectors/: base.py  base64_unwrap.py  detect_secrets_plugins.py  entropy.py  hybrid.py  llm.py  opf_pf.py  rule.py  spacy_ner.py
engine/parsers/: har.py
eval/: context_check.py  measure_ft_v2.py  measure_openai_privacy.py  runner.py  verify_check.py
eval/baselines/: presidio_only.py  vanilla_gemma.py
eval/results/: hard_val_recall.json  hard_val_recall_openai_pf.json  hard_val_recall_openai_pf_ft_v1.json  hard_val_recall_openai_pf_ft_v3_e5.json  hard_val_recall_opf_seed43_2k.json  hard_val_recall_opf_v10.json  hard_val_recall_opf_v3_json.json  hard_val_recall_opf_v4_balanced.json  hard_val_recall_opf_v7.json  hard_val_recall_opf_v9.json  val_recall.json
scripts/: runpod_train.py
server/: main.py
testcases/har/: 001_idor.har  002_aws_key_leak.har  003_github_token.har  003_github_token.yaml
testcases/text/: 001_curl_log.yaml  003_nmap_scan.yaml
tests/: test_base64_unwrap.py  test_detect_secrets_plugins.py  test_entropy_detector.py  test_ft_compare_scoring.py  test_granularity.py  test_recovery.py  test_regressions.py  test_rule_detector.py  test_scaling_contract.py  test_seed_phrase.py
training/: generate_dataset.py  train_lora.py
training/configs/: gemma3_4b_lora.yaml
ui/: index.html  pnpm-lock.yaml
ui/src/: main.ts
(+107 files in other folders)
