[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pentect"
version = "0.1.0"
description = "Masking engine for sensitive data in pentest contexts"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "EdamAme-x" }]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    # Curated vendor-secret regex bundle from Yelp; we use only its plugin
    # regexes (no verification, no scanning pipeline). See
    # engine/detectors/detect_secrets_plugins.py.
    "detect-secrets>=1.5",
    # spaCy NER catches person / organization names in free-form prose
    # that the FT classifier misses (long product descriptions, copyright
    # lines, etc.). We default to en_core_web_sm; install it with:
    #   python -m spacy download en_core_web_sm
    "spacy>=3.7",
]

[project.optional-dependencies]
# Presidio is used only as a baseline for evaluation (eval/baselines/presidio_only.py),
# not as part of Pentect's detection pipeline.
baselines = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]
llm = [
    "transformers>=4.40",
    "torch>=2.2",
    "accelerate>=0.30",
    "peft>=0.10",
    "bitsandbytes>=0.43",
    "datasets>=2.19",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
runpod = [
    "runpod>=1.9",
]

[project.scripts]
pentect = "engine.cli:main"

[tool.setuptools.packages.find]
include = ["engine*", "eval*", "training*", "testcases*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
